--- a/bibliography.bib
+++ b/bibliography.bib
@@ -442,3 +442,191 @@ doi = {10.1109/EDUCON60312.2024.10578672}
   pages={88--105},
   year={2022}
 }
+
+
+@mastersthesis{de2011comment,
+  title={Comment analysis for program comprehension},
+  author={de Freitas, Jos{\'e} Lu{\'\i}s Figueiredo},
+  year={2011},
+  school={Universidade do Minho (Portugal)}
+}
+
+
+@inproceedings{tan2007icomment,
+  title={/* icomment: Bugs or bad comments?*},
+  author={Tan, Lin and Yuan, Ding and Krishna, Gopal and Zhou, Yuanyuan},
+  booktitle={Proceedings of twenty-first ACM SIGOPS symposium on Operating systems principles},
+  pages={145--158},
+  year={2007}
+}
+
+
+@inproceedings{de2017investigating,
+  title={Investigating the identification of technical debt through code comment analysis},
+  author={de Freitas Farias, M{\'a}rio Andr{\'e} and Santos, Jos{\'e} Am{\^a}ncio and Kalinowski, Marcos and Mendon{\c{c}}a, Manoel and Sp{\'\i}nola, Rodrigo Oliveira},
+  booktitle={Enterprise Information Systems: 18th International Conference, ICEIS 2016, Rome, Italy, April 25--28, 2016, Revised Selected Papers 18},
+  pages={284--309},
+  year={2017},
+  organization={Springer}
+}
+
+@incollection{izu2025introducing,
+  title={Introducing Code Quality at CS1 Level: Examples and Activities},
+  author={Izu, Cruz and Mirolo, Claudio and B{\"o}rstler, J{\"u}rgen and Connamacher, Harold and Crosby, Ryan and Glassey, Richard and Haldeman, Georgiana and Kiljunen, Olli and Kumar, Amruth N and Liu, David and others},
+  booktitle={2024 Working Group Reports on Innovation and Technology in Computer Science Education},
+  pages={339--377},
+  year={2025}
+}
+
+
+@inproceedings{sedano2016code,
+  title={Code readability testing, an empirical study},
+  author={Sedano, Todd},
+  booktitle={2016 IEEE 29th International conference on software engineering education and training (CSEET)},
+  pages={111--117},
+  year={2016},
+  organization={IEEE}
+}
+
+
+@article{xia2017measuring,
+  title={Measuring program comprehension: A large-scale field study with professionals},
+  author={Xia, Xin and Bao, Lingfeng and Lo, David and Xing, Zhenchang and Hassan, Ahmed E and Li, Shanping},
+  journal={IEEE Transactions on Software Engineering},
+  volume={44},
+  number={10},
+  pages={951--976},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{winkler2024investigating,
+  title={Investigating the readability of test code},
+  author={Winkler, Dietmar and Urbanke, Pirmin and Ramler, Rudolf},
+  journal={Empirical Software Engineering},
+  volume={29},
+  number={2},
+  pages={53},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{wagner2021code,
+  title={Code comprehension confounders: A study of intelligence and personality},
+  author={Wagner, Stefan and Wyrich, Marvin},
+  journal={IEEE Transactions on Software Engineering},
+  volume={48},
+  number={12},
+  pages={4789--4801},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{boehm1976quantitative,
+  title={Quantitative evaluation of software quality},
+  author={Boehm, Barry W and Brown, JR and Lipow, M},
+  journal={Software Engineering: Barry W. Boehm's Lifetime Contributions to Software Development, Management, and Research},
+  pages={25},
+  year={1976}
+}
+
+@inproceedings{dugalic2012iso,
+  title={ISO Software Quality Standards and Certification.},
+  author={Dugalic, Bisera and Mishev, Anastas},
+  booktitle={BCI (Local)},
+  pages={113--116},
+  year={2012}
+}
+@INPROCEEDINGS{8075175,
+  author={Al-Saiyd, Nedhal A.},
+  booktitle={2017 2nd International Conference on Computer and Communication Systems (ICCCS)}, 
+  title={Source code comprehension analysis in software maintenance}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-5},
+  keywords={Maintenance engineering;Computer languages;Software maintenance;Documentation;Software systems;source code comprehension;code comprehension;models;refactoring;effort estimation;source line of code (SLOC)},
+  doi={10.1109/CCOMS.2017.8075175}}
+
+@article{karahasanovic2007comprehension,
+  title={Comprehension strategies and difficulties in maintaining object-oriented systems: An explorative study},
+  author={Karahasanovi{\'c}, Amela and Levine, Annette Kristin and Thomas, Richard},
+  journal={Journal of Systems and Software},
+  volume={80},
+  number={9},
+  pages={1541--1559},
+  year={2007},
+  publisher={Elsevier}
+}
+
+
+
+@article{duran2022cognitive,
+  title={Cognitive load theory in computing education research: A review},
+  author={Duran, Rodrigo and Zavgorodniaia, Albina and Sorva, Juha},
+  journal={ACM Transactions on Computing Education (TOCE)},
+  volume={22},
+  number={4},
+  pages={1--27},
+  year={2022},
+  publisher={ACM New York, NY}
+}
+
+
+@article{andrzejewska2020development,
+  title={Development of program comprehension skills by novice programmers--longitudinal eye tracking studies},
+  author={Andrzejewska, Magdalena and Kotoniak, Pawe{\l}},
+  journal={Informatics in Education},
+  volume={19},
+  number={4},
+  pages={521--541},
+  year={2020},
+  publisher={Vilnius University Institute of Data Science and Digital Technologies}
+}
+
+@article{sharafi2015systematic,
+  title={A systematic literature review on the usage of eye-tracking in software engineering},
+  author={Sharafi, Zohreh and Soh, Z{\'e}phyrin and Gu{\'e}h{\'e}neuc, Yann-Ga{\"e}l},
+  journal={Information and Software Technology},
+  volume={67},
+  pages={79--107},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
+@article{junior5005089understanding,
+  title={Understanding Python Repetition Structures Through the Eyes of Novice Programmers: An Eye Tracking Analysis},
+  author={J{\'u}nior Silva da Costa, Jos{\'e} and Gheyi, Rohit and Aldo, Jos{\'e} and Ribeiro, M{\'a}rcio},
+  journal={Available at SSRN 5005089}
+}
+
+@inproceedings{sharafi2015eye,
+  title={Eye-tracking metrics in software engineering},
+  author={Sharafi, Zohreh and Shaffer, Timothy and Sharif, Bonita and Gu{\'e}h{\'e}neuc, Yann-Ga{\"e}l},
+  booktitle={2015 Asia-Pacific Software Engineering Conference (APSEC)},
+  pages={96--103},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{jbara2017programmers,
+  title={How programmers read regular code: a controlled experiment using eye tracking},
+  author={Jbara, Ahmad and Feitelson, Dror G},
+  journal={Empirical software engineering},
+  volume={22},
+  pages={1440--1477},
+  year={2017},
+  publisher={Springer}
+}
+
+
+@article{blignaut2019visualization,
+  title={Visualization and quantification of eye tracking data for the evaluation of oculomotor function},
+  author={Blignaut, Pieter and van Rensburg, Elize Janse and Oberholzer, Marsha},
+  journal={Heliyon},
+  volume={5},
+  number={1},
+  year={2019},
+  publisher={Elsevier}
+}
